src/geo.scss
@import '../node_modules/normalize.css/normalize.css';

* {
  box-sizing: border-box;
}

body {
  color: rgb(250, 250, 250);
  background: rgb(33, 33, 33);
  font-family: 'Share Tech Mono', sans-serif;
  font-size: 12px;


  display: flex;
  flex-direction: column;
  flex-wrap: nowrap;
  justify-content: flex-start;
}

h1 {
  font-size: 1.2em;
  font-weight: normal;

}

a, a:visited {
  color: rgb(250, 250, 250);
}

header {
  background: rgb(44, 44, 44);
}

header, main, footer {
  padding: 1rem;
}

